Discard trip added. Users see only status "2" trips. Admin sees all trips regardless of status.